--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,10 +6,12 @@
   "version": "1.0",
 
   "permissions": [
-    "https://api.twitter.com/"
+    "https://api.twitter.com/",
+    "storage"
   ],
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "index.html"
-  }
+  },
+  "options_page": "options.html"
 }
