--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,8 +9,12 @@
     "https://api.twitter.com/",
     "storage"
   ],
+  "icons": { 
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png" 
+  },
   "browser_action": {
-    "default_icon": "icon.png",
     "default_popup": "index.html"
   },
   "options_page": "options.html"
