--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "DAT Twitter Roulette",
+  "name": "Twitter Roulette",
   "description": "This extension allows to select a random tweet from a sample search.",
-  "version": "1.0",
+  "version": "1.1",
 
   "permissions": [
     "https://api.twitter.com/",
